initial project version

--- a/public/view/router/router.html
+++ b/public/view/router/router.html
@@ -5,6 +5,8 @@
 	<div class="header-title-contact">Contacts</div>
 	<div class="header-title-main">Смак Життя</div>
 	<div class="header-title-result">Results</div>
-	<div id="contact" class="header-item-right">Contacts</div>
+	<div id="contact" class="header-item-right">
+		<p style="height: auto; margin: 0; line-height: 0; padding-top: 11px;">+380990622710</p>
+		<p style="height: auto; margin: 0; line-height: 0; padding-top: 19px;">+380978375848</p></div>
 </header>
 <div id="content" class="content"></div>
